<resources>
    <string name="app_name">Contribua</string>
    <string name="contribute_description_for_splash">Contribua para que a obra missionária cresça mais.</string>
    <string name="title_for_splash">Contribua</string>
    <string name="txv_list_district_attorney">Qual dos promotores abaixo está fazendo a coleta?</string>
    <string name="txv_description_information">Para prosseguir com a coleta de contribuição, por favor prossiga selecionando as opções abaixo.</string>
    <string name="button_name_contribuation">Prosseguir para contribuição.</string>
    <string name="select">Selecione</string>
    <string name="txv_hint_district">Promotor de missões</string>
    <string name="txv_hint_congregation">Selecione sua congregação</string>
    <string name="txv_hint_select_area">Selecione sua área</string>
    <string name="txv_input_select_area">Área da congregação</string>
    <string name="txv_select_distinc_text">Selecione o promotor</string>
    <string name="txv_input_hint_congregation">Congregação</string>
    <string name="label_for_informationActivity">Informações do Promotor</string>
    <string name="toast_message_information_empty">Para prosseguir, é necessário marcar todas as opções.</string>
    <string name="txv_hint_input_name_contributor">Nome do contribuinte</string>
    <string name="prefix_brl">R$</string>
    <string name="edt_hint_value_contribuation">Valor da contribuição</string>
    <string name="text_button_signature">Assinatura do contribuinte</string>
    <string name="txv_button_finish_contribuation">Finalizar contribuição</string>
    <string name="buton_date">Data</string>
    <string name="label_for_donate_activity">Informações da contribuição</string>
    <string name="message_does_not_return">Não é possível retorna. Finalize a contribuição</string>
    <string name="input_data_in_all_fields">Por favor, preencha todos os campos!</string>
    <string name="clear_signature">Limpar assinatura</string>
    <string name="save_signature">Salvar Assinatura</string>
    <string name="texv_signature">Assinatura</string>
    <string name="txv_description_home">IGREJA EVANGÉLICA ASSEMBLEIA DE DEUS EM PERNAMBUCO\n\n Seja Bem Vindo(a) ao aplicativo de Registro das Contribuições Missionárias.\n\n Para prosseguir com a Contribuição, aperte o botão abaixo.</string>
    <string name="button_name_start_contribuation">Clique aqui para iniciar contribuição.</string>
</resources>