<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.donate.signature.SignatureActivity">

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/signature_pad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/view_of_signature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:penMaxWidth="@dimen/size_2dp"
        app:penMinWidth="@dimen/size_2dp" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress"
        style="@style/Widget.MaterialComponents.CircularProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackColor="@color/black" />

    <View
        android:id="@+id/view_of_signature"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="64dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/guidline_horizontal_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texv_signature"
        android:textSize="@dimen/size_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_of_signature" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_signature"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_60dp"
        android:layout_marginHorizontal="@dimen/size_12dp"
        android:text="@string/save_signature"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_clear_signature"
        app:layout_constraintTop_toTopOf="@+id/guidline_horizontal_bottom" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear_signature"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_60dp"
        android:layout_marginHorizontal="@dimen/size_12dp"
        android:text="@string/clear_signature"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_save_signature"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/signature_pad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidline_horizontal_bottom" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidline_horizontal_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/size_60dp" />
</androidx.constraintlayout.widget.ConstraintLayout>